welcome.lessons.welcome.array.island.Island.scala.error
island:9: error: ')' expected but 'var' found.
			var j = i
                        ^island:18: error: ')' expected but '}' found.
		}
                ^